# xenomai-practice

./: CMakeLists.txt  README.md
cmake/: FindXenomai.cmake
src/: message_queue_send.cpp  rt_main.cpp
src/common/: MotorMessage.h  RtMacro.h
src/intertask_communication/: message_pipe_receive.cpp  message_pipe_send.cpp  message_queue_receive.cpp  message_queue_send.cpp  task_receive.cpp  task_send.cpp
src/timing/: round_trip_receive.cpp  round_trip_send.cpp
